--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
-# Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
+/go-epp-fi
+
+# Editors
+.idea
 
 # Test binary, built with `go test -c`
 *.test
