--- a/.gitignore
+++ b/.gitignore
@@ -12,5 +12,6 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-# Dependency directories (remove the comment below to include it)
-# vendor/
+# Temporary test files
+testtmp
+catemp
